Sun Nov 16 11:07:25 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_io.rb (test_readpartial_locktmp):
	  remove unnecessary begin/end

Sun Nov 16 00:45:23 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: Specify dependencies for generated C sources.

Sat Nov 15 23:10:45 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: No need to declare dependencies which
	  will be detected by inference rules.

Sat Nov 15 20:34:23 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h: Include ruby.h and ruby/encoding.h to be
	  includable without prior inclusion.

Sat Nov 15 20:46:44 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest):
	  Group tests by general entity and parameter entity.

Sat Nov 15 20:43:31 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Define
	  test XML in each test method because (1) each XML in used only
	  one test and (2) related data and code should be close.

Sat Nov 15 20:39:06 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Use
	  one test method for one test.

Sat Nov 15 20:16:59 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Use
	  setup and teardown instead of ensure in test.

Sat Nov 15 20:11:34 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb (REXMLTests::TestDocument): Group
	  entity expansion limit related tests.

Sat Nov 15 20:09:00 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb (REXMLTests::TestDocument::BomTest):
	  Fix wrong parent class. It doesn't need inherit tests in
	  TestDocument class.

Sat Nov 15 19:48:59 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (depend_rules): support comments during a line.
