@@ -628,21 +628,10 @@ $(PLATFORM_D):
 
 ###
 CCAN_DIR = {$(VPATH)}ccan
-CCAN_LIST_INCLUDES = $(CCAN_DIR)/build_assert/build_assert.h \
-			$(CCAN_DIR)/check_type/check_type.h \
-			$(CCAN_DIR)/container_of/container_of.h \
-			$(CCAN_DIR)/list/list.h \
-			$(CCAN_DIR)/str/str.h
 
 RUBY_H_INCLUDES    = {$(VPATH)}ruby.h {$(VPATH)}config.h {$(VPATH)}defines.h \
 		     {$(VPATH)}intern.h {$(VPATH)}missing.h {$(VPATH)}st.h \
 		     {$(VPATH)}subst.h
-ENCODING_H_INCLUDES= {$(VPATH)}encoding.h {$(VPATH)}oniguruma.h
-PROBES_H_INCLUDES  = {$(VPATH)}probes.h
-VM_CORE_H_INCLUDES = {$(VPATH)}vm_core.h {$(VPATH)}thread_$(THREAD_MODEL).h \
-		     {$(VPATH)}node.h {$(VPATH)}method.h {$(VPATH)}ruby_atomic.h \
-	             {$(VPATH)}vm_debug.h {$(VPATH)}id.h {$(VPATH)}thread_native.h \
-	             $(CCAN_LIST_INCLUDES)
 
 ###
 
